@@ -40,6 +40,7 @@ namespace lsp
                 prop::TextAdjust            sTextAdjust;
                 prop::MenuItemType          sType;
                 prop::Boolean               sChecked;
+                prop::Boolean               sDrawUnchecked;
                 prop::Color                 sBgSelectedColor;
                 prop::Color                 sTextColor;
                 prop::Color                 sTextSelectedColor;
@@ -69,6 +70,7 @@ namespace lsp
                 prop::TextAdjust            sTextAdjust;
                 prop::MenuItemType          sType;
                 prop::Boolean               sChecked;
+                prop::Boolean               sDrawUnchecked;
                 prop::Color                 sBgSelectedColor;
                 prop::Color                 sTextColor;
                 prop::Color                 sTextSelectedColor;
@@ -97,6 +99,7 @@ namespace lsp
                 LSP_TK_PROPERTY(TextAdjust,                 text_adjust,                &sTextAdjust)
                 LSP_TK_PROPERTY(MenuItemType,               type,                       &sType)
                 LSP_TK_PROPERTY(Boolean,                    checked,                    &sChecked)
+                LSP_TK_PROPERTY(Boolean,                    draw_unchecked,             &sDrawUnchecked)
                 LSP_TK_PROPERTY(Color,                      bg_selected_color,          &sBgSelectedColor)
                 LSP_TK_PROPERTY(Color,                      text_color,                 &sTextColor)
                 LSP_TK_PROPERTY(Color,                      text_selected_color,        &sTextSelectedColor)
