@@ -4,6 +4,7 @@
 
 === 1.0.8 ===
 * Fixed invalid tk::TF_VERTICAL tether flag value.
+* Added possibility to hide check/radio box for unchecked tk::MenuItem objects.
 * Updated dependencies file.
 
 === 1.0.7 ===
